--- a/GameDB-v3/Views/Usuario/Index.cshtml
+++ b/GameDB-v3/Views/Usuario/Index.cshtml
@@ -6,16 +6,16 @@
 
 <div class="row">
     <div class="col-12 col-sm-4">
-        <h4 class="fw-bold">Olá, @Model.Usuario!</h4>
+        <h4 class="fw-bold text-center text-sm-start">Olá, @Model.Usuario!</h4>
     </div>
-    <div class="col text-end">
+    <div class="col-12 col-sm-8 text-end">
         <form class="" id="pesquisar">
             <div class="row justify-content-end g-2">
-                <div class="col-8">
-                    <input type="text" id="titulo" name="titulo" class="form-control" placeholder="Pesquisar jogo" />
+                <div class="col-7 col-sm-4">
+                    <input type="text" id="titulo" name="titulo" class="form-control-sm w-100" placeholder="Pesquisar jogo" />
                 </div>
-                <div class="col-auto">
-                    <a role="button" class="btn btn-primary" asp-action="Index" asp-controller="Rawg">
+                <div class="col-5 col-sm-3 col-lg-2">
+                    <a role="button" class="btn btn-primary btn-sm w-100" asp-action="Index" asp-controller="Rawg">
                         <i class="fa-solid fa-gamepad"></i>&nbsp; NOVO
                     </a>
                 </div>
