--- a/GameDB-v3/Views/Home/Login.cshtml
+++ b/GameDB-v3/Views/Home/Login.cshtml
@@ -70,7 +70,7 @@
                             </button>
                             <div class="row py-2">
                                 <div class="col-6 fs-7 text-start">
-                                    <a class="link-light" asp-action="Cadastro" asp-controller="Usuario">Cadastre-se</a>
+                                    <a class="link-light" asp-action="Cadastro" asp-controller="Home">Cadastre-se</a>
                                 </div>
                                 <div class="col-6 fs-7 text-end">
                                     <a class="link-light" asp-action="RecuperarSenha" asp-controller="Home">Esqueci minha senha</a>
