--- a/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
+++ b/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
@@ -36,7 +36,7 @@
                                        role="button"
                                        asp-area=""
                                        asp-controller="Usuario"
-                                       asp-action="Cadastro"
+                                       asp-action="Edicao"
                                        asp-route-id="@Model.ID">
                                         Perfil
                                     </a>
