--- a/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
+++ b/GameDB-v3/Views/Shared/Components/Navbar/Default.cshtml
@@ -36,8 +36,7 @@
                                        role="button"
                                        asp-area=""
                                        asp-controller="Usuario"
-                                       asp-action="Edicao"
-                                       asp-route-id="@Model.ID">
+                                       asp-action="Edicao">
                                         Perfil
                                     </a>
                                 </li>
