--- a/GameDB-v3/Views/Home/Login.cshtml
+++ b/GameDB-v3/Views/Home/Login.cshtml
@@ -37,7 +37,7 @@
 </style>
 
 <div class="row d-flex justify-content-center">
-    <div class="mx-auto mx-sm-1 col-12 col-sm-6 col-md-6 col-lg-4 py-5">
+    <div class="mx-auto mx-sm-1 col-12 col-sm-8 col-md-6 col-lg-4 py-5">
         <div class="">
             <div class="card-body px-3 py-4 bg-dark rounded-3 shadow-lg">
                 <div class="">
@@ -73,7 +73,7 @@
                                     <a class="link-light" asp-action="Cadastro" asp-controller="Home">Cadastre-se</a>
                                 </div>
                                 <div class="col-6 fs-7 text-end">
-                                    <a class="link-light" asp-action="RecuperarSenha" asp-controller="Home">Esqueci minha senha</a>
+                                    <a class="link-light" href="#" data-bs-toggle="modal" data-bs-target="#modalRecuperarSenha">Esqueci minha senha</a>
                                 </div>
                             </div>
 
@@ -95,8 +95,42 @@
                             <a asp-action="LoginGoogle" asp-controller="GoogleLogin" class="google-material">
                                 <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg">
                             </a>
+                            <a asp-action="LoginSteam" asp-controller="Home" class="btn btn-dark">
+                                Login com Steam
+                            </a>
                         </div>
 
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal RECUPERAR SENHA -->
+<div class="modal fade" id="modalRecuperarSenha" tabindex="-1" aria-labelledby="modalRecuperarSenha" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-secondary fs-5">RECUPERAR SENHA</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <form class="w-auto mx-auto" id="form-recuperar">
+                        <div class="text-center">
+                            <div class="input-group mb-2">
+                                <label for="email" class="input-group-text">Email</label>
+                                <input type="text" class="form-control" name="email" />
+                                <span asp-validation-for="Email"></span>
+                                <button type="button" id="recuperar-senha" class="btn btn-primary">
+                                    <span id="texto-salvar">
+                                        Enviar código
+                                    </span>
+                                    <span id="loading" style="display:none; text-align:center;" class="spinner-border spinner-border-sm" role="status"></span>
+                                </button>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -144,5 +178,60 @@
                 }
             });
         });
+
+            //todo: testar
+            $(document).on('click','#recuperar-senha', function(e){
+            e.preventDefault();
+
+            const form = $(this).closest("form");
+
+            Swal.fire({
+                title: "Realmente deseja resetar sua senha? Esta ação é irreversível.",
+                showDenyButton: true,
+                denyButtonText: "Não",
+                confirmButtonText: "Sim",
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    $.ajax({
+                        url: '/Home/RecuperarSenha',
+                        type: 'POST',
+                        data: $('#form-recuperar').serialize(),
+                        headers: {
+                            'X-Requested-With': 'XMLHttpRequest'
+                        },
+                        beforeSend: function () {
+                            $("#loading").show();
+                            $("#texto-salvar").hide();
+                            $('#btnSalvar').prop('disabled', true);
+                        },
+                        complete: function () {
+                            $("#loading").hide();
+                            $("#texto-salvar").show();
+                            $('#btnSalvar').prop('disabled', false);
+                        }
+                    })
+                    .done(function (response) {
+                        if (response.success) {
+                            window.location.href = response.redirectUrl;
+                        }
+                    })
+                    .fail(function (xhr) {
+                        if (xhr.responseJSON) {
+                            Swal.fire({
+                                icon: 'error',
+                                title: xhr.responseJSON.title ?? 'Erro',
+                                html: xhr.responseJSON.detail
+                            });
+                        } else {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Erro',
+                                text: 'Erro inesperado ao processar a requisição.'
+                            });
+                        }
+                    });
+            }
+        })
+        })
     </script>
 }
