Login e integração com a Steam v1

--- a/GameDB-v3/Views/Shared/_Layout.cshtml
+++ b/GameDB-v3/Views/Shared/_Layout.cshtml
@@ -15,8 +15,10 @@
     <title>@ViewData["Title"] - GamerLog</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/jquery.rateyo.min.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/lib/font-awesome/css/brands.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/fontawesome/fontawesome.min.css" />
     <link asp-append-version="true" rel="stylesheet" href="~/lib/fontawesome/solid.min.css" />
+    <link asp-append-version="true" rel="stylesheet" href="~/lib/font-awesome/css/brands.css" />
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GameDB_v3.styles.css" asp-append-version="true" />
@@ -48,6 +50,7 @@
     <script asp-append-version="true" src="~/js/graficos/graficos.js"></script>
     <script asp-append-version="true" src="~/lib/fontawesome/fontawesome.min.js"></script>
     <script asp-append-version="true" src="~/lib/fontawesome/solid.min.js"></script>
+    <script asp-append-version="true" src="~/lib/font-awesome/js/brands.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/jquery.rateyo.min.js"></script> 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
