--- a/GameDB-v3/Views/Home/Login.cshtml
+++ b/GameDB-v3/Views/Home/Login.cshtml
@@ -91,12 +91,13 @@
                             </div>
                         </div>
 
-                        <div class="row justify-content-center mb-3">
-                            <a asp-action="LoginGoogle" asp-controller="GoogleLogin" class="google-material">
-                                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg">
+                        <div class="row justify-content-center mb-3 d-flex gap-3">
+                            <a asp-action="LoginGoogle" asp-controller="GoogleLogin" class="text-dark bg-light rounded-5 fs-1 w-auto">
+                                <i class="fa-brands fa-google"></i>
+                                @* <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"> *@
                             </a>
-                            <a asp-action="LoginSteam" asp-controller="Home" class="btn btn-dark">
-                                Login com Steam
+                            <a asp-action="LoginSteam" asp-controller="Steam" class="text-light fs-1 text-dark bg-light rounded-5 w-auto">
+                                <i class="fa-brands fa-steam"></i>
                             </a>
                         </div>
 
